@@ -1,3 +1,8 @@
+2004-01-15  MINAMI Hirokazu  <minami@mistfall.net>
+
+	* x_imagelib_gdk.c: When gtk2 is choosed(-with-imagelib=gdk-pixbuf2),
+	use g_object_unref insted of (deprecated)gdk_pixbuf_unref.
+
 2004-01-14  Tomohiro KUBOTA  <kubota@debian.org>
 
 	* mlconfig lists scrollbars in user's configuration directory
